--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -14,6 +14,10 @@
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
+        
+android:supportsPictureInPicture="true"  
+    android:resizeableActivity="true"
+android:screenOrientation="unspecified"
         android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|screenSize|smallestScreenSize|uiMode"
         android:launchMode="singleTask"
         android:windowSoftInputMode="adjustResize"
