--- a/package.json
+++ b/package.json
@@ -7,20 +7,30 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-firebase/app": "^23.5.0",
     "@react-native-firebase/auth": "^23.5.0",
     "@react-native/new-app-screen": "0.82.1",
     "@react-navigation/native": "^7.1.24",
     "@react-navigation/native-stack": "^7.8.5",
+    "@videosdk.live/react-native-pip-android": "^0.0.3",
     "react": "19.1.1",
     "react-native": "0.82.1",
+    "react-native-blob-util": "^0.24.5",
+    "react-native-config": "^1.6.1",
     "react-native-orientation-locker": "^1.7.0",
+    "react-native-pdf": "^7.0.3",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.18.0",
-    "react-native-video": "^6.18.0"
+    "react-native-vector-icons": "^10.3.0",
+    "react-native-video": "^6.18.0",
+    "react-native-webview": "^13.16.0",
+    "react-native-youtube-iframe": "^2.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -33,13 +43,15 @@
     "@react-native/eslint-config": "0.82.1",
     "@react-native/metro-config": "0.82.1",
     "@react-native/typescript-config": "0.82.1",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^13.3.3",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.1.1",
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
-    "jest": "^29.6.3",
+    "jest": "^29.7.0",
     "prettier": "2.8.8",
-    "react-test-renderer": "19.1.1",
+    "react-test-renderer": "^19.1.1",
     "typescript": "^5.8.3"
   },
   "engines": {
