--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-native-vector-icons": "^10.3.0",
     "react-native-video": "^6.18.0",
     "react-native-webview": "^13.16.0",
-    "react-native-youtube-iframe": "^2.4.1"
+    "react-native-youtube-iframe": "^2.4.1",
+    "react-native-ytdl": "^4.8.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
